--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "dist/index.js",
   "repository": "git@github.com:bigcommerce-labs/storefront-data-hooks.git",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc && cp src/schema.d.ts dist/schema.d.ts"
   },
