--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && cp src/schema.d.ts dist/schema.d.ts"
+    "build": "rimraf dist && tsc && cp src/schema.d.ts dist/schema.d.ts",
+    "prepublish": "npm run build"
   },
   "prettier": {
     "semi": false,
@@ -29,6 +30,7 @@
     "@types/react": "^16.9.53",
     "next": "^9.5.5",
     "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
