--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "jsx": "react",
     "declaration": true,
-    "outDir": "dist"
+    "outDir": "./"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_nodules"]
 }
