--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
     "graphql": "^15.4.0",
-    "next": "^9.5.5",
+    "next": "^10.0.8",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
+    "next": ">=10",
     "react": ">=17"
   }
 }
