--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie": "0.4.1",
     "js-cookie": "2.2.1",
     "lodash.debounce": "4.0.8",
+    "lodash.omit": "^4.5.0",
     "swr": "0.3.6"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/cookie": "^0.4.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
     "graphql": "^15.4.0",
