docs: extend CONTRIBUTING instructions

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "clean": "rimraf *.js *.d.ts api cart commerce products scripts wishlist",
     "build": "npm run clean && tsc && cp src/schema.d.ts schema.d.ts",
+    "start": "npm run clean && tsc -w",
     "prepublish": "npm run build",
     "generate": "graphql-codegen",
     "generate:definitions": "node src/scripts/generate-definitions.js"
