--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@bigcommerce/storefront-data-hooks",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "main": "index.js",
   "repository": "git@github.com:bigcommerce/storefront-data-hooks.git",
   "license": "MIT",
   "files": [
     "*.js",
     "*.d.ts",
+    "address",
     "api",
     "cart",
     "commerce",
