--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "wishlist"
   ],
   "scripts": {
-    "clean": "rimraf *.js *.d.ts api cart commerce products scripts wishlist",
+    "clean": "rimraf *.js *.d.ts api cart commerce products scripts wishlist address",
     "build": "npm run clean && tsc && cp src/schema.d.ts schema.d.ts",
     "start": "npm run clean && tsc -w",
     "prepublish": "npm run build",
