--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "npm run clean && tsc -w",
     "prepublish": "npm run build",
     "generate": "graphql-codegen",
-    "generate:definitions": "node src/scripts/generate-definitions.js"
+    "generate:definitions": "node src/scripts/generate-definitions.js",
+    "release": "release-it"
   },
   "prettier": {
     "semi": false,
@@ -48,6 +49,7 @@
     "graphql": "^15.4.0",
     "next": "^10.0.8",
     "prettier": "^2.1.2",
+    "release-it": "^14.10.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
