--- a/package.json
+++ b/package.json
@@ -47,9 +47,14 @@
     "@types/lodash.omit": "^4.5.6",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "graphql": "^15.4.0",
     "next": "^10.0.8",
-    "prettier": "^2.1.2",
+    "prettier": "^2.3.2",
+    "prettier-eslint": "^13.0.0",
     "release-it": "^14.10.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
