--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -22,7 +22,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
       - name: git config
         run: |
           git config user.name "${GITHUB_ACTOR}"
