feat(BCP20-850) add in customer impersonation token

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
+BIGCOMMERCE_CHANNEL_ID=
 BIGCOMMERCE_STOREFRONT_API_TOKEN=
 BIGCOMMERCE_STOREFRONT_API_URL=
+BIGCOMMERCE_STORE_API_CLIENT_ID=
+BIGCOMMERCE_STORE_API_TOKEN=
+BIGCOMMERCE_STORE_API_URL=
+BIGCOMMERCE_STORE_HASH=
+SECRET_COOKIE_PASSWORD=bcisawesomebcisawesomebcisawesome
