chore: update release process [no ci]

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,4 +1,8 @@
 {
+  "git": {
+    "commitMessage": "chore: release ${version} [no ci]",
+    "tagName": "v${version}"
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "infile": "CHANGELOG.md",
