--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "isolatedModules": true,
     "jsx": "react",
     "declaration": true,
-    "outDir": "./"
+    "outDir": "dist"
   },
   "include": ["src"],
   "exclude": ["node_nodules"]
