chore: merge canary into main (#136)
* chore: remove .idea project file

* feat: BCP20-205 Regenerate Schema files.

* feat: BCP20-1205 Add updated message for store api hook.

* chore: fix typo

* feat: BCP20-1205 add grapohQL network error mesage.

* feat: BCP20-1205 add local config for contributions.

* chore: Rename .env example file.

* fix: BCP20-1283 Remove debounce from the useUpdateItem callback.

* chore: Upgrade all packages and increase @graphql-codegen/cli to 2.6.2

* feat(BCP20-850) add in customer impersonation token

* Fix: Parse channel_id to integery for BC API

* Fix: Typescript error

---------

Co-authored-by: Vinny Listrani <vinny@tri.be>
Co-authored-by: Jing Wang <jwang@jivewisestudio.com>
Co-authored-by: lukefrogger <lukefrogger@gmail.com>

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "dependencies": {
     "@vercel/fetch": "6.1.0",
     "cookie": "0.4.1",
+    "iron-session": "^6.0.5",
     "js-cookie": "2.2.1",
     "lodash.debounce": "4.0.8",
     "lodash.omit": "^4.5.0",
     "swr": "0.3.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.19.0",
+    "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/schema-ast": "^1.17.8",
     "@graphql-codegen/typescript": "^1.17.11",
     "@graphql-codegen/typescript-operations": "^1.17.8",
